[package]
name         = "flink"
version      = "0.1.0"
edition      = "2021"
description  = "Film + extras primary / secondary marketplace on Solana"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
anchor-lang        = { version = "0.30.0", features = ["init-if-needed"] }
anchor-spl         = "0.30.0"
spl-token          = { version = "3.5", features = ["no-entrypoint"] }
bytemuck           = "1.15"
